--- a/manage.tex
+++ b/manage.tex
@@ -13,9 +13,185 @@ planned a comprehensive budget. This budget contained names, quantities, and
 estimated costs of all the major parts of our project. This itemized breakdown
 of WHCS allowed us to budget our funds amongst the group members and also to
 apply for external funding. Through the use of our detailed budget, we were
-able to land a funding offer of 
+able to land a funding offer of \$434.42 from Boeing. This doesn't cover all
+costs of the WHCS project, but takes a lot of financial burden off of the group
+members. Beyond this funding offer, the group members have stated that they are
+willing to provide up to \$300 each.
+
+The costs listed in \autoref{tab:budget} are derived from costs researched
+online. These are the best estimate at the time of creation for each item. Some
+items are special in that the costs are dependent on other factors, such as
+size. This items have a note specifying the method used to come to the final
+price. This is important to note for auditors and for our future purchasing.
+
+\begin{table}[H]
+\makebox[\textwidth][c]{
+\begin{tabular}{|l|l|l|l|b{5cm}|}
+\hline
+{\color{black} \textbf{Item}} &
+{\color{black} \textbf{Cost}} &
+{\color{black} \textbf{Qt.}} &
+{\color{black} \textbf{Item Total}} &
+{\color{black} \textbf{Note}}\\\hline
+{\color{black} Base Station Bluetooth Module} &
+{\color{black} \$7.95} &
+{\color{black} 1} &
+{\color{black} \$7.95} &
+\\\hline
+{\color{black} Base Station RF Chip} &
+{\color{black} \$0.97} &
+{\color{black} 1} &
+{\color{black} \$0.97} &
+\\\hline
+{\color{black} Base Station PCB} &
+{\color{black} \$90.00} &
+{\color{black} 1} &
+{\color{black} \$90.00} &
+{\color{black} \url{https://oshpark.com/pricing} \$5 per square inch. Assumed 4x4 board, and \$10 shipping}\\\hline
+{\color{black} Base Station LCD} &
+{\color{black} \$30.00} &
+{\color{black} 1} &
+{\color{black} \$30.00} &
+{\color{black} Comes assembled}\\\hline
+{\color{black} Control Module RF Chip} &
+{\color{black} \$0.97} &
+{\color{black} 4} &
+{\color{black} \$3.88} &
+{\color{black} Per control module}\\\hline
+{\color{black} Control Module PCB} &
+{\color{black} \$33.00} &
+{\color{black} 4} &
+{\color{black} \$132.00} &
+{\color{black} \url{http://www.4pcb.com/33-each-pcbs/}}\\\hline
+{\color{black} Control module MCU} &
+{\color{black} \$4.00} &
+{\color{black} 4} &
+{\color{black} \$16.00} &
+{\color{black} Per control module}\\\hline
+{\color{black} Pocket AVR Programmer} &
+{\color{black} \$15.00} &
+{\color{black} 1} &
+{\color{black} \$15.00} &
+{\color{black} \url{http://sparkfun.com}}\\\hline
+{\color{black} Solid{}-State Relay} &
+{\color{black} \$17.00} &
+{\color{black} 4} &
+{\color{black} \$68.00} &
+{\color{black} Alternative to mechanical relay}\\\hline
+{\color{black} Bluetooth Capable Phone} &
+{\color{black} \$0.00} &
+{\color{black} 1} &
+{\color{black} \$0.00} &
+{\color{black} Members possess a Bluetooth capable phone}\\\hline
+{\color{black} Casing for Modules} &
+{\color{black} \$2.00} &
+{\color{black} 5} &
+{\color{black} \$10.00} &
+\\\hline
+{\color{black} Battery Holder} &
+{\color{black} \$2.50} &
+{\color{black} 5} &
+{\color{black} \$12.50} &
+\\\hline
+{\color{black} DC{}-DC Step Down (LDO)} &
+{\color{black} \$1.00} &
+{\color{black} 5} &
+{\color{black} \$5.00} &
+{\color{black} 1 per board (including control modules)}\\\hline
+{\color{black} AC Rectifier} &
+{\color{black} \$5.00} &
+{\color{black} 1} &
+{\color{black} \$5.00} &
+{\color{black} Self{}-built and assembled (diodes, capacitors)}\\\hline
+{\color{black} GFIC Outlet} &
+{\color{black} \$17.00} &
+{\color{black} 1} &
+{\color{black} \$17.00} &
+{\color{black} With safety features}\\\hline
+{\color{black} Electronic Strike} &
+{\color{black} \$50.00} &
+{\color{black} 1} &
+{\color{black} \$50.00} &
+{\color{black} For access control}\\\hline
+{\color{black} Temperature Sensor} &
+{\color{black} \$1.50} &
+{\color{black} 1} &
+{\color{black} \$1.50} &
+\\\hline
+{\color{black} Light Fixture} &
+{\color{black} \$4.50} &
+{\color{black} 1} &
+{\color{black} \$4.50} &
+{\color{black} Bulb and socket}\\\hline
+{\color{black} Tranformer} &
+{\color{black} \$15.00} &
+{\color{black} 4} &
+{\color{black} \$60.00} &
+{\color{black} 120v AC to AC voltage of logical DC}\\\hline
+{\color{black} Shipping Costs} &
+{\color{black} \$8} &
+{\color{black} 12} &
+{\color{black} \$96.00} &
+{\color{black} Boards , parts, prototyping equipment}\\\hline
+{\color{black} Project Miscellaneous} &
+{\color{black} N/A} &
+{\color{black} N/A} &
+{\color{black} \$50.00} &
+{\color{black} Wire,Resistors,Capacitors, Inductors,LED{}'s prototyping equipment, etc}\\\hline
+{\color{black} \textbf{TOTAL}} &
+{\color{black} \textbf{\$675.30}} &
+ &
+ &
+\\\hline
+\end{tabular}
+}
+\caption{a comprehensive break down of WHCS' budget}
+\label{tab:budget}
+\end{table}
+
+Naturally making a completely correct budget that covers every possible expense
+would be difficult and time consuming. There will be items and purchases made
+that are below, above, or not even on the list. With sufficiently complex
+projects this is to be expected, but will not be a problem. The individual
+money offered to support the group will cover any additional, unplanned
+expenses.
+
+In order to keep track of what was reimbursed versus what was purchased by
+group members, all receipts will be kept for record. Any purchases made will be
+documented and a running sum of used funds will be maintained. This will keep
+the purchases within the range of the budget and prevent large, unexpected
+costs from surprising group members.
 
 \subsection{Parts Acquisition}
+In order to fulfill WHCS's Bill of Materials, we will need to identify
+manufacturers, retailers, and any other online and offline resources for
+purchasing. Initial research gave the beginning insight in to where to look for
+specific products. This should be considered early on in order to consolidate
+purchases, which will simplify shipping and ultimately save on cost. Some items
+may be special enough to warrant their purchase from a ``one-off'' retailer.
+The electronic strike falls in to this category due to its specialty nature.
+
+For all of our bulk electronic parts, we will be purchasing them from Digikey
+or Mouser, depending on the price. Digikey is familar to us as engineers and
+their interface for purchasing is straight forward. Additionally they ship from
+the United States, which will ensure that we get our parts in a timely manner.
+Shipping parts from China may be cheaper overall, but the cost is higher in the
+time lost to waiting for their arrival. To avoid this debt, purchases from
+overseas will be made a early as possible. That way we will not be blocked in
+our design by waiting for parts.
 
 \subsection{Milestones}
+The WHCS project has a limited amount of time to complete its end goal of
+having a working system. When thought of all at once, this seems like an
+insurmountable task. To simplify this large problem, we have broken up the task
+in to smaller, more achievable, milestones. This milestones give us a target
+window for completion and also the interdependencies between milestones. For
+instance, if the PCB board for the base station is not finished, the next step
+of sending it off for manufactoring will be delayed with every day. This will
+push every dependent milestone back causing a project delay. The gantt chat
+shown in \autoref{fig:gantt-chart} is used to keep our project goals in check
+with the reality that we a final deadline.
+
+\ucfgfx[scale=0.45]{fig:gantt-chart}{InitialProposal-img005.png}
+{The master gantt chart for the WHCS project}
 
