Make section heading dimmer

--- a/section-heading.tex
+++ b/section-heading.tex
@@ -16,7 +16,7 @@
 }%
 
 \tikz[baseline,trim left=3.1cm,trim right=3cm] {
-    \fill [whcs-accent!25] (2.5cm,-1ex) rectangle (\textwidth+3.1cm,2.5ex);
+    \fill [white!95!black] (2.5cm,-1ex) rectangle (\textwidth+3.1cm,2.5ex);
     \node [
         fill=whcs-accent!60!white,
         anchor= base east,
