--- a/proto.tex
+++ b/proto.tex
@@ -47,6 +47,41 @@ to and from the mobile phone.  When the control module microcontroller is doing
 more than just toggling an LED is when WHCS will be impressive.
 
 \subsection{Rogers Board Etching Prototyping}
+In our design we wanted to make the most use out of prototyping as possible.
+the worst mistakes are always the mistakes that are discovered to be mistakes
+in the last stage of a design. The first way to go about prototyping is to test
+things at a very low level. Checking if individual subsystems work the way that
+you would expect them to work, this level can definitely be done with a
+breadboard. Once the individual subsystems have been tested the next step is to
+check how these systems integrate, this too can be done with a bread board. At
+this point you already have a complete proof of concept. The final stage in
+prototyping is to do everything possible to make a design that is as close to
+what the final product will be as possible. Since our group is already making
+their own power boards out of etched PCB. We figured that testing the control
+modules and base station with an etched PCB design would be the best way to
+know if our drawings from our gerber files lined up the way we wanted them too.
+As a prior step you can also compare dimensions of the parts of the design with
+the gerber file drawing by simply printing out the gerber file on to copy paper
+and placing elements on top. Etching however will add an even further advantage
+in that it will allow us to see if the electrical connections in our drawing
+worked out the way we would expect them too. Once we{}'ve proved the concept to
+the level that it has been etched on to practice boards we know that our design
+will work as it was intended to work.
+
+Etching is actually a fairly simple process. We will be using
+toner paper to transfer the gerber file from the computer onto the board. Next
+we will utilize TRF paper to further protect the design. Finally we will be
+using an etchant to eat away the copper that is not part of our design. There
+are many different options for etchants that could have been chosen in order to
+complete this step. The most easily accessible though is made by combining
+vinegar, hydrogen peroxide, and salt together. After using the etching solution
+it is important to dispose of it properly (it can{}'t just be poured down the
+sink). Since the solution is very acidic balancing it with a strong base such
+as baking soda or soap will prepare the solution for a better disposal. The
+boards we are using are rogers corporation boards because they provide free
+laminate samples to students. Once the board is etched we will simply solder on
+the components to the board. It{}'s of little importance how we actually
+soldered it on since this board is simply for the use of prototyping
 
 \subsection{WHCS Proto-Panel}
 \label{sec:proto-panel-proto}
