Adjust colors and new exported builds

--- a/section-heading.tex
+++ b/section-heading.tex
@@ -18,7 +18,7 @@
 \tikz[baseline,trim left=3.1cm,trim right=3cm] {
     \fill [white!95!black] (2.5cm,-1ex) rectangle (\textwidth+3.1cm,2.5ex);
     \node [
-        fill=whcs-accent!60!white,
+        fill=whcs-accent-dark!60!white,
         anchor= base east,
         rounded rectangle,
         minimum height=3.5ex] at (3cm,0) {
