--- a/whcs.tex
+++ b/whcs.tex
@@ -81,7 +81,8 @@
 \definecolor{keywordc}{rgb}{.63,0,.42}
 
 % Title page
-\definecolor{whcs-accent}{HTML}{7F2AFF}
+\definecolor{whcs-accent}{HTML}{A66AFF}
+\definecolor{whcs-accent-dark}{HTML}{6600FF}
 \definecolor{whcs-muted}{HTML}{555555}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -104,7 +105,7 @@ pdfauthor={Grant Hernandez},
 \else
 \hypersetup{pdfnewwindow=true, % prevent the user from leaving the paper
 colorlinks,
-linkcolor={whcs-accent!80!black},
+linkcolor={whcs-accent-dark},
 citecolor={blue!50!black},
 urlcolor={blue!80!black},
 % PDF Meta
