W: UI Lib, Net Lib, X10

--- a/desc.tex
+++ b/desc.tex
@@ -250,6 +250,14 @@ be no more than 6''x6'' and must be mountable directly to a PCB through the use
 of standoffs.
 
 \subsection{Research of Related Products}
+In order to have a successful product, the WHCS has done background research on
+products tha thave similar goals to WHCS. There is a lot to be learned from the
+``big players'' in the industry. Through a survey of the below companies, we
+have a better idea of some of the features WHCS could offer and what the other
+companies aren't. This allows us to make new innovations and avoid mistakes
+that others have already made. Beyond that, we will know where WHCS falls in
+the spectrum of home automation by gathering as much data about other companies
+as possible.
 
 \subsubsection{Z-Wave}
 Z{}-Wave is a wireless technology that serves as a building foundation for home
@@ -337,7 +345,6 @@ hardware.
 
 
 \subsubsection{Nest Labs}
-\todo{0.5 pages}
 Unlike the previous companies, \href{http://nest.com}{Nest Labs} is quite new,
 but has certainly claimed its space in the smart home market with its smart
 Nest Thermostat. Their other product, the Nest Protect, a smart smoke and
@@ -366,5 +373,23 @@ Coming in at \$249, the thermostat might be a tough sell for typical home owners
 already have a working, yet ``dumb'', thermostat.
 
 \subsubsection{X10}
-\todo{0.5 pages}
+Founded in 1970s, X10 is one of the oldest home automation companies still on
+the market.  Home security and automation are the key goals of X10. To meet
+these goals, X10 offers a wide selection of products to link every aspect of
+the home or business. When these products arrived in the early days, they set
+the standard for home automation. The architecture is centered around wireless
+remotes, transcievers, and appliance modules.  The transciever is a fixed
+plug-in that is listening for commands from the wireless remote. If it receives
+a command, it can send signals through the house power grid to an appliance
+module.
 
+The applications for X10 products are limitless. One issue with X10 and its
+goals are that the entire system is proprietary and encourages lock-in. The
+frameworks for making new X10 devices are not open, which could limit any
+support. WHCS aims to do the opposite by providing a well documented home automation solution.
+This became an issue with the original company of X10, X10 WTI, went
+bankrupt in 2013. This caused a disruption in the X10 ecosystem, including
+dedicated services run by X10 WTI. Luckily another company, Authinx, picked up
+the domain \url{www.x10.com} and is continuing to offer support and sales for
+X10 products. Give this recent change of hands, choosing X10 today may not be a
+sure choice for the future.
