--- a/whcs.tex
+++ b/whcs.tex
@@ -130,14 +130,16 @@ pdfauthor={Grant Hernandez},
 \newcommand{\ucffig}[3]{
 \begin{figure}[H]
 \centering
+\makebox[\textwidth][c]{
 #2
+}
 \caption{#3}
 \label{#1}
 \end{figure}
 }
 
 \newcommand{\ucfgfx}[4][scale=1.0]{
-  \ucffig{#2}{\includegraphics[#1]{#3}}{#4}
+\ucffig{#2}{\includegraphics[#1]{#3}}{#4}
 }
 
 % TBW macro
