Remove old TODOs and resize image

--- a/desc.tex
+++ b/desc.tex
@@ -53,7 +53,6 @@ modules.
 \ucfgfx[scale=0.65]{fig:whcs-overview}{a21expected2pages-img001.png}{WHCS System Overview}
 
 \subsection{Objectives}
-\todo{3 pages}
 In order to enable homeowners to have the best experience with their new WHCS,
 we will explain our core project objectives. These describe what the end-users
 are be able to do with the system at a high level.
@@ -86,20 +85,19 @@ toggling light switches, WHCS will have the ability to be smart about when they
 are ON or OFF, freeing the user from having to think about their state at all.
 In addition, lights, just like all of the other connected control modules in
 the home, will be able to be actuated on a specific schedule. This schedule
-\todo{make a section for scheduling or remove} can be designed by the homeowner
+can be designed by the homeowner
 to meet their daily lives or in a special circumstance, such as travel.
 
 \subsubsection{Outlet Activation}
 Lights aren't the only actionable thing in the home. There are a multitude of
 appliances throughout the home which could benefit from remote control. Some
-of these include coffee makers, toasters, or computers\todo{find some better
-examples}. If integrated with WHCS through outlet control, these appliances
+of these include coffee makers, toasters, or computers.
+If integrated with WHCS through outlet control, these appliances
 would be able to be a part of the home network. Imagine being able to start the
 morning coffee from the comfort of the bedroom. This would be possible with an
 appropriate coffee maker and WHCS outlet control. An added benefit from having
 outlets being automated is that there would be less draw from power leeching
-devices' power subsystems, which may be always-on. \todo{cite article
-hyping up how much power you lose to leeches}
+devices' power subsystems, which may be always-on.
 
 \subsubsection{Door Access}
 In addition to controlling home lights and various appliances, giving users
