--- a/proto.tex
+++ b/proto.tex
@@ -181,4 +181,4 @@ sensor will be placed on the bottom half. To make things look symmetrical the
 lamp will be placed in the middle while the outlet and the temperature sensor
 will be placed on the side. The display will look something like \autoref{fig:proto-sketch}.
 
-\ucfgfx[width=15.24cm,height=9.878cm]{fig:proto-sketch}{a83expected2pagesprotopanel-img001.png}{General design of WHCS display board}
+\ucfgfx[scale=0.45]{fig:proto-sketch}{a83expected2pagesprotopanel-img001.png}{General design of WHCS display board}
